--- a/feature/todayplan/src/main/res/values/strings.xml
+++ b/feature/todayplan/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="todayplan_weekly">Weekly</string>
     <string name="todayplan_monthly">Monthly</string>
     <string name="todayplan_schedule">Schedule</string>
+    <string name="todayplan_today_tasks_empty">No tasks today</string>
 </resources>
