--- a/feature/registration/src/main/res/values-in/strings.xml
+++ b/feature/registration/src/main/res/values-in/strings.xml
@@ -4,4 +4,7 @@
     <string name="registration_username_question">Siapa nama kamu?</string>
     <string name="registration_language_question">Pilih bahasa</string>
     <string name="registration_theme_question">Pilih tema</string>
+    <string name="registration_previous">Kembali</string>
+    <string name="registration_next">Selanjutnya</string>
+    <string name="registration_complete">Selesai</string>
 </resources>
