--- a/feature/registration/src/main/res/values/strings.xml
+++ b/feature/registration/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="registration_username_question">What would you like to be called?</string>
     <string name="registration_language_question">Language setting</string>
     <string name="registration_theme_question">Theme preference</string>
+    <string name="registration_previous">Previous</string>
+    <string name="registration_next">Next</string>
+    <string name="registration_complete">Complete</string>
 </resources>
