--- a/feature/taskmanagement/src/main/res/values-in/strings.xml
+++ b/feature/taskmanagement/src/main/res/values-in/strings.xml
@@ -8,4 +8,5 @@
     <string name="taskmanagement_daily">Harian</string>
     <string name="taskmanagement_remove_from_plan">Singkirkan dari jadwal</string>
     <string name="taskmanagement_delete_task">Hapus</string>
+    <string name="taskmanagement_empty_tasks">Tidak Ada Tugas</string>
 </resources>
