--- a/feature/taskmanagement/src/main/res/values/strings.xml
+++ b/feature/taskmanagement/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="taskmanagement_daily">Daily</string>
     <string name="taskmanagement_remove_from_plan">Remove from plan</string>
     <string name="taskmanagement_delete_task">Delete</string>
+    <string name="taskmanagement_empty_tasks">No Tasks Listed</string>
 </resources>
