--- a/feature/taskmanagement/src/main/res/values-in/strings.xml
+++ b/feature/taskmanagement/src/main/res/values-in/strings.xml
@@ -9,4 +9,6 @@
     <string name="taskmanagement_remove_from_plan">Singkirkan dari jadwal</string>
     <string name="taskmanagement_delete_task">Hapus</string>
     <string name="taskmanagement_empty_tasks">Tidak Ada Tugas</string>
+    <string name="taskmanagement_select_all">Pilih semua</string>
+    <string name="taskmanagement_cancel">Batal</string>
 </resources>
