--- a/feature/registration/src/main/res/values-in/strings.xml
+++ b/feature/registration/src/main/res/values-in/strings.xml
@@ -7,4 +7,5 @@
     <string name="registration_previous">Kembali</string>
     <string name="registration_next">Selanjutnya</string>
     <string name="registration_complete">Selesai</string>
+    <string name="registration_greeting">Halo,</string>
 </resources>
