--- a/feature/registration/src/main/res/values/strings.xml
+++ b/feature/registration/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="registration_previous">Previous</string>
     <string name="registration_next">Next</string>
     <string name="registration_complete">Complete</string>
+    <string name="registration_greeting">Hello,</string>
 </resources>
