--- a/feature/taskmanagement/src/main/res/values/strings.xml
+++ b/feature/taskmanagement/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="taskmanagement_empty_tasks">No Tasks Listed</string>
     <string name="taskmanagement_select_all">Select all</string>
     <string name="taskmanagement_cancel">Cancel</string>
+    <string name="taskmanagement_remove_selected_message">tasks removed from plan</string>
+    <string name="taskmanagement_remove_message">Task removed from plan</string>
+    <string name="taskmanagement_delete_message">Task deleted</string>
+    <string name="taskmanagement_delete_selected_message">tasks deleted</string>
 </resources>
