--- a/feature/taskdetail/src/main/res/values-in/strings.xml
+++ b/feature/taskdetail/src/main/res/values-in/strings.xml
@@ -3,4 +3,6 @@
     <string name="taskdetail_create_new">Buat Tugas Baru</string>
     <string name="taskdetail_detail">Detail Tugas</string>
     <string name="taskdetail_edit_task">Edit Tugas</string>
+    <string name="taskdetail_title">Nama</string>
+    <string name="taskdetail_edit_title">Nama tugas</string>
 </resources>
