--- a/feature/taskdetail/src/main/res/values/strings.xml
+++ b/feature/taskdetail/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="taskdetail_special_examples">party, travelling, vacation</string>
     <string name="taskdetail_complete">Complete</string>
     <string name="taskdetail_create_task">Create Task</string>
+    <string name="taskdetail_created_on">created on:</string>
+    <string name="taskdetail_updated_on">updated on:</string>
 </resources>
