--- a/feature/taskdetail/src/main/res/values/strings.xml
+++ b/feature/taskdetail/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="taskdetail_created_on">created on:</string>
     <string name="taskdetail_updated_on">updated on:</string>
     <string name="taskdetail_no_description">No description...</string>
+    <string name="taskdetail_cancel">Cancel</string>
+    <string name="taskdetail_discard">Discard</string>
+    <string name="taskdetail_cancel_edit_message">Are you sure you want to discard changes?</string>
+    <string name="taskdetail_discard_changes">Discard Changes</string>
+    <string name="taskdetail_delete">Delete</string>
 </resources>
