--- a/feature/taskdetail/src/main/res/values-in/strings.xml
+++ b/feature/taskdetail/src/main/res/values-in/strings.xml
@@ -26,4 +26,6 @@
     <string name="taskdetail_delete">Hapus</string>
     <string name="taskdetail_delete_task">Hapus Tugas</string>
     <string name="taskdetail_delete_confirmation">Kamu yakin ingin menghapus tugas ini?</string>
+    <string name="taskdetail_task_created">Tugas \'%1$s\' dibuat</string>
+    <string name="taskdetail_task_deleted">Tugas \'%1$s\' dihapus</string>
 </resources>
