--- a/feature/taskdetail/src/main/res/values/strings.xml
+++ b/feature/taskdetail/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="taskdetail_delete">Delete</string>
     <string name="taskdetail_delete_task">Delete Task</string>
     <string name="taskdetail_delete_confirmation">Are you sure you want to delete this task?</string>
+    <string name="taskdetail_task_created">Task \'%1$s\' created</string>
+    <string name="taskdetail_task_deleted">Task \'%1$s\' deleted</string>
 </resources>
