--- a/feature/plandetail/src/main/res/values-in/strings.xml
+++ b/feature/plandetail/src/main/res/values-in/strings.xml
@@ -3,4 +3,5 @@
     <string name="plandetail_today_plan">Rencana hari ini</string>
     <string name="plandetail_week_plan">Rencana minggu ini</string>
     <string name="plandetail_month_plan">Rencana bulan ini</string>
+    <string name="plandetail_no_plan">Rencana belum diatur</string>
 </resources>
