--- a/feature/plandetail/src/main/res/values/strings.xml
+++ b/feature/plandetail/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="plandetail_today_plan">Today\'s plan</string>
     <string name="plandetail_week_plan">This week\'s plan</string>
     <string name="plandetail_month_plan">This month\'s plan</string>
+    <string name="plandetail_no_plan">Plan hasn\'t been set</string>
 </resources>
