--- a/feature/plandetail/src/main/res/values/strings.xml
+++ b/feature/plandetail/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="plandetail_week_plan">This week\'s plan</string>
     <string name="plandetail_month_plan">This month\'s plan</string>
     <string name="plandetail_no_plan">Plan hasn\'t been set</string>
+    <string name="plandetail_complete">Complete</string>
+    <string name="plandetail_remove">Remove</string>
+    <string name="plandetail_completed">completed</string>
+    <string name="plandetail_in_progress">In progress</string>
+    <string name="plandetail_waiting">Waiting</string>
+    <string name="plandetail_late">Late</string>
+    <string name="plandetail_due">Due</string>
+    <string name="plandetail_priority">Priority</string>
 </resources>
