Add arrange plan action to NoPlan

--- a/feature/plandetail/src/main/res/values-in/strings.xml
+++ b/feature/plandetail/src/main/res/values-in/strings.xml
@@ -16,4 +16,5 @@
     <string name="plandetail_start_day">Hari Mulai</string>
     <string name="plandetail_start_date">Tanggal Mulai</string>
     <string name="plandetail_arrange_plan">Atur Rencana</string>
+    <string name="plandetail_arrange_message">Atur rencanamu di sini</string>
 </resources>
