--- a/feature/planarrangement/src/main/res/values-in/strings.xml
+++ b/feature/planarrangement/src/main/res/values-in/strings.xml
@@ -5,4 +5,5 @@
     <string name="planarrangement_this_week">Minggu Ini</string>
     <string name="planarrangement_this_month">Bulan Ini</string>
     <string name="planarrangement_select_task">Pilih Tugas</string>
+    <string name="planarrangement_no_tasks">Tidak Ada Tugas</string>
 </resources>
