--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="ui_week_set">Set as this week\'s plan</string>
     <string name="ui_month_set">Set as this month\'s plan</string>
     <string name="ui_not_set">Not set on any plan</string>
+    <string name="ui_description">Description</string>
+    <string name="ui_no_description">No description...</string>
+    <string name="ui_title">Title</string>
 </resources>
