--- a/feature/planarrangement/src/main/res/values-in/strings.xml
+++ b/feature/planarrangement/src/main/res/values-in/strings.xml
@@ -11,4 +11,6 @@
     <string name="planarrangement_end_time">Waktu Selesai</string>
     <string name="planarrangement_set">Atur</string>
     <string name="planarrangement_cancel">Batal</string>
+    <string name="planarrangement_to">hingga</string>
+    <string name="planarrangement_none">Tidak ada</string>
 </resources>
