--- a/feature/planarrangement/src/main/res/values-in/strings.xml
+++ b/feature/planarrangement/src/main/res/values-in/strings.xml
@@ -13,4 +13,5 @@
     <string name="planarrangement_cancel">Batal</string>
     <string name="planarrangement_to">hingga</string>
     <string name="planarrangement_none">Tidak ada</string>
+    <string name="planarrangement_schedule">Jadwal</string>
 </resources>
