--- a/feature/planarrangement/src/main/res/values/strings.xml
+++ b/feature/planarrangement/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="planarrangement_cancel">Cancel</string>
     <string name="planarrangement_to">to</string>
     <string name="planarrangement_none">None</string>
+    <string name="planarrangement_schedule">Schedule</string>
 </resources>
