--- a/feature/planarrangement/src/main/res/values-in/strings.xml
+++ b/feature/planarrangement/src/main/res/values-in/strings.xml
@@ -14,4 +14,8 @@
     <string name="planarrangement_to">hingga</string>
     <string name="planarrangement_none">Tidak ada</string>
     <string name="planarrangement_schedule">Jadwal</string>
+    <string name="planarrangement_reminder">Pengingat</string>
+    <string name="planarrangement_reminder_info">Terima notifikasi ketika tugas akan dimulai</string>
+    <string name="planarrangement_default">Atur sebagai default</string>
+    <string name="planarrangement_default_info">Atur tugas untuk berulang setiap hari sesuai jadwal yang dipilih (hari, minggu, atau bulan)</string>
 </resources>
