--- a/feature/planarrangement/src/main/res/values/strings.xml
+++ b/feature/planarrangement/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="planarrangement_reminder_info">Receive notification when the task about to start</string>
     <string name="planarrangement_default">Set as default</string>
     <string name="planarrangement_default_info">Set the task to repeat daily on chosen schedule (day, week, or month)</string>
+    <string name="planarrangement_start_date">Start Date</string>
+    <string name="planarrangement_end_date">End Date</string>
 </resources>
