Add scroll down indicator in AssignTask

--- a/feature/planarrangement/src/main/res/values-in/strings.xml
+++ b/feature/planarrangement/src/main/res/values-in/strings.xml
@@ -20,4 +20,5 @@
     <string name="planarrangement_default_info">Atur tugas untuk berulang setiap hari sesuai jadwal yang dipilih (hari, minggu, atau bulan)</string>
     <string name="planarrangement_start_date">Tanggal Mulai</string>
     <string name="planarrangement_end_date">Tanggal Akhir</string>
+    <string name="planarrangement_save">Simpan</string>
 </resources>
