--- a/feature/planarrangement/src/main/res/values/strings.xml
+++ b/feature/planarrangement/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="planarrangement_end_date">End Date</string>
     <string name="planarrangement_save">Save</string>
     <string name="planarrangement_invalid_time_warning">End time can\'t be earlier than start time</string>
+    <string name="planarrangement_enter_start_date_warning">Select start date</string>
+    <string name="planarrangement_invalid_date_warning">End date can\'t be earlier than start date</string>
 </resources>
