--- a/feature/planarrangement/src/main/res/values/strings.xml
+++ b/feature/planarrangement/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="planarrangement_enter_start_date_warning">Select start date</string>
     <string name="planarrangement_invalid_date_warning">End date can\'t be earlier than start date</string>
     <string name="planarrangement_enter_start_time_warning">Select start time</string>
+    <string name="planarrangement_scheduled">Task scheduled</string>
 </resources>
