--- a/core/notification/src/main/res/values/strings.xml
+++ b/core/notification/src/main/res/values/strings.xml
@@ -3,8 +3,12 @@
     <string name="notification_channel_name">Task reminder</string>
     <string name="notifcation_channel_description">Reminder for scheduled tasks</string>
     <string name="notification_task_start_title">Task Starting Soon</string>
-    <string name="notification_task_start_content">Your task \'%1$s\' is about to start at %2$s. Get ready!</string>
-    <string name="notification_task_end_content">Your task \'%1$s\' is ending at %2$s. Wrap things up soon!</string>
+    <string name="notification_task_start_content">Task \'%1$s\' is about to start at %2$s. Get ready!</string>
+    <string name="notification_task_end_content">Task \'%1$s\' is ending at %2$s. Wrap things up soon!</string>
     <string name="notification_task_end_title">Task Ending Soon</string>
     <string name="notification_remind_later">Remind me in 5 minutes</string>
+    <string name="notification_task_start_title_overdue">Task Started!</string>
+    <string name="notification_task_start_content_overdue">Your task \'%1$s\' has started, let\'s get it done!</string>
+    <string name="notification_task_end_title_overdue">Task Overdue!</string>
+    <string name="notification_task_end_content_overdue">Task \'%1$s\' is overdue, let\'s wrap things up!</string>
 </resources>
