--- a/feature/taskdetail/src/main/res/values-in/strings.xml
+++ b/feature/taskdetail/src/main/res/values-in/strings.xml
@@ -27,4 +27,5 @@
     <string name="taskdetail_delete_confirmation">Kamu yakin ingin menghapus tugas ini?</string>
     <string name="taskdetail_task_created">Tugas \'%1$s\' dibuat</string>
     <string name="taskdetail_task_deleted">Tugas \'%1$s\' dihapus</string>
+    <string name="taskdetail_plan_task">Atur tugas</string>
 </resources>
