--- a/feature/taskdetail/src/main/res/values/strings.xml
+++ b/feature/taskdetail/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="taskdetail_delete_confirmation">Are you sure you want to delete this task?</string>
     <string name="taskdetail_task_created">Task \'%1$s\' created</string>
     <string name="taskdetail_task_deleted">Task \'%1$s\' deleted</string>
+    <string name="taskdetail_plan_task">Plan task</string>
 </resources>
