--- a/feature/planarrangement/src/main/res/values/strings.xml
+++ b/feature/planarrangement/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="planarrangement_set_alarm_and_reminders">Set alarm and reminders</string>
     <string name="planarrangement_alarms_and_reminders">Alarms and reminders</string>
     <string name="planarrangement_alarms_and_reminders_desc">This app needs alarms and reminders enabled to be able to send task reminders</string>
+    <string name="planarrangement_new_task">New Task</string>
 </resources>
