--- a/feature/settings/src/main/res/values-in/strings.xml
+++ b/feature/settings/src/main/res/values-in/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="settings_theme">Tema</string>
-    <string name="settings_language">Bahasa</string>
+    <string name="settings_languages">Bahasa</string>
     <string name="settings_notifications">Notifikasi</string>
     <string name="settings_notification_timing">Waktu Notifikasi</string>
     <string name="settings_light">Terang</string>
