--- a/feature/settings/src/main/res/values-in/strings.xml
+++ b/feature/settings/src/main/res/values-in/strings.xml
@@ -8,4 +8,6 @@
     <string name="settings_dark">Gelap</string>
     <string name="settings_system_default">Default Sistem</string>
     <string name="settings_settings">Pengaturan</string>
+    <string name="settings_language">Bahasa</string>
+    <string name="settings_notification">Notifikasi</string>
 </resources>
