--- a/feature/settings/src/main/res/values/strings.xml
+++ b/feature/settings/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="settings_dark">Dark</string>
     <string name="settings_system_default">System Default</string>
     <string name="settings_settings">Settings</string>
+    <string name="settings_language">Language</string>
+    <string name="settings_notification">Notification</string>
 </resources>
