--- a/feature/settings/src/main/res/values/strings.xml
+++ b/feature/settings/src/main/res/values/strings.xml
@@ -3,11 +3,16 @@
     <string name="settings_theme">Theme</string>
     <string name="settings_languages">Languages</string>
     <string name="settings_notifications">Notifications</string>
-    <string name="settings_notification_timing">Notification Timing</string>
-    <string name="settings_light">Light</string>
-    <string name="settings_dark">Dark</string>
-    <string name="settings_system_default">System Default</string>
+    <string name="settings_reminder_notification">Reminder Notification</string>
     <string name="settings_settings">Settings</string>
     <string name="settings_language">Language</string>
     <string name="settings_notification">Notification</string>
+    <string name="settings_show_notifications">Show notifications</string>
+    <string name="settings_reminder_notification_timing_about">Receive reminder notification before the specified \'start time\' and \'end time\' of a task</string>
+    <string name="settings_day_period">Day Period</string>
+    <string name="settings_week_period">Week Period</string>
+    <string name="settings_month_period">Month Period</string>
+    <string name="settings_minute">Minute</string>
+    <string name="settings_hour">Hour</string>
+    <string name="settings_day">Day</string>
 </resources>
