--- a/feature/todayplan/src/main/res/values-in/strings.xml
+++ b/feature/todayplan/src/main/res/values-in/strings.xml
@@ -13,4 +13,5 @@
     <string name="todayplan_set_today_tasks">Atur tugas hari ini</string>
     <string name="todayplan_remove_from_schedule">Hapus dari jadwal</string>
     <string name="todayplan_mark_as_completed">Selesai</string>
+    <string name="todayplan_today_tasks_completed">Tugas selesai!</string>
 </resources>
