--- a/feature/todayplan/src/main/res/values/strings.xml
+++ b/feature/todayplan/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="todayplan_set_today_tasks">Set tasks to do today</string>
     <string name="todayplan_remove_from_schedule">Remove from schedule</string>
     <string name="todayplan_mark_as_completed">Mark as completed</string>
+    <string name="todayplan_today_tasks_completed">Tasks complete!</string>
 </resources>
